Set contact-form size and add transition to fix form jumping when submitting

--- a/src/styles.css
+++ b/src/styles.css
@@ -219,8 +219,10 @@ blockquote {
 	border-radius: 12px;
 	width: 100%;
 	max-width: 600px;
+	min-height: 450px;
 	margin: 2rem auto;
 	gap: 1.5rem;
+	transition: all 0.3s ease;
 }
 
 .form-group,
